Move the icon retrieving and caching to iconsHelper

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -45,6 +45,7 @@
     <!-- XXX can be removed while gecko support navigator.mozHour12 API -->
     <script defer src="shared/js/date_time_helper.js"></script>
     <script defer src="shared/js/web_manifest_helper.js"></script>
+    <script defer src="shared/js/icons_helper.js"></script>
 
     <script defer src="shared/js/pin-card.js"></script>
     <link rel="stylesheet" href="shared/style/pin-card.css">
